BEE-1 Pooling for connections
